fixed mobile menu right alignment

--- a/assets/css/main3.css
+++ b/assets/css/main3.css
@@ -136,11 +136,25 @@ a.social-icons i {
 }
 
 div#header-tabs p {
-    /* width: 260px; */
+    width: fit-content;
     /* min-width: 100px; */
     position: relative;
-    right: 5%;
-    /* transform: translateX(-50%); */
+    right: -95%;
+    left: auto;
+    transform: translateX(-100%);
+}
+
+div#header-tabs p a i {
+    position: relative;
+    left: 95%;
+    right: auto;
+    transform: translateX(-100%);
+}
+
+div#header-tabs p a span {
+    position: relative;
+    right: 100px;
+    left: auto;
 }
 
 #header-tabs a:link, #header-tabs a:visited {
@@ -326,6 +340,9 @@ a:visited.post-link, a:link.post-link {
     }
 
     div#header-tabs p {
+        width: unset;
+        position: static;
+        transform: unset;
         margin: 12px;
         padding-left: 20px;
         text-align: left;
@@ -333,11 +350,14 @@ a:visited.post-link, a:link.post-link {
     
     div#header-tabs p a i {
         font-size: 100%;
+        position: static;
+        transform: unset;
     }
 
     div#header-tabs p a span {
         position: relative;
         left: 10px;
+        right: auto;
     }
 
     #header-tabs a:link, #header-tabs a:visited {
